# mcp-memory-service

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FIXED_README.md  INSTALLATION.md  MCP_PROTOCOL_FIX.md  MCP_PROTOCOL_FIX_DOCUMENTATION.md  README.md  WINDOWS_JSON_FIX.md  claude_desktop_config_template.json  install.py  license.md  mcp_config.json  memory_wrapper.py  memory_wrapper_uv.py  package-lock.json  pyproject.toml  requirements.txt  requirements_current.txt  run-with-uv.bat  run-with-uv.sh  setup.py  smithery.yaml  test_client.py  uv_wrapper.py  validation_report.txt
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.github/workflows/: release.yml
.uv/: config.toml
claude_config/: Claude Desktop Config for Apple Silicon Macs.json  claude_desktop_config.json  claude_desktop_config_template.json
cloudflare_worker/: package-lock.json  package.json  tsconfig.json  wrangler.example.toml
cloudflare_worker/src/: index.ts
docs/: MCP_Cloudflare_Design.md  README.md
docs/guides/: installation.md  migration.md  scripts.md  troubleshooting.md  windows-setup.md
docs/technical/: memory-migration.md  tag-storage.md
match3-backend/: package-lock.json  package.json
path/to/your/db/: chroma.sqlite3
py310_venv/: pyvenv.cfg
scripts/: convert_to_uv.py  debug_dependencies.py  fix_pytorch_dependency.py  fix_readline.py  fix_sitecustomize.py  fix_sitecustomize_enhanced.py  install_uv.py  install_windows.py  list-collections.py  mcp-migration.py  memory-migration.py  migrate_tags.py  repair_memories.py  requirements-migration.txt  run_memory_server.py  test-connection.py  test_installation.py  validate_memories.py  verify_environment.py  verify_environment_enhanced.py  verify_pytorch_windows.py  verify_torch.py
src/: chroma_test_isolated.py  index.js  memory_backend.py  memory_server.py  test_client.py  test_management.py  test_mcp_protocol.py
src/mcp_memory_service/: __init__.py  config.py  server-init-fix.py  server.py
src/mcp_memory_service/models/: __init__.py  memory.py
src/mcp_memory_service/storage/: __init__.py  base.py  chroma.py
src/mcp_memory_service/utils/: __init__.py  db_utils.py  debug.py  hashing.py  system_detection.py  time_parser.py
src/memory_service/: __init__.py
src/utils/: db_manager.py
templates/: default.md.j2
tests/: __init__.py  test_database.py  test_memory_ops.py  test_semantic_search.py  test_tag_storage.md  test_tag_storage.py  test_time_parser.py
