[project]
name = "mcp-memory-service"
version = "0.1.0"
description = "A semantic memory service using ChromaDB and sentence-transformers"
authors = [ { name = "Heinrich Krupp", email = "heinrich.krupp@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory-service"
version = "0.1.0"
description = "An MCP-based semantic memory service"
readme = "README.md"
requires-python = ">=3.10"  # Updated to match MCP requirements
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "chromadb==0.5.23",
    "sentence-transformers>=2.2.2",
    "tokenizers==0.20.3",
    "mcp>=1.0.0,<2.0.0"
]

[project.scripts]
memory = "mcp_memory_service.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory_service"]